--- a/lecture/20191110.md
+++ b/lecture/20191110.md
@@ -1,4 +1,5 @@
-﻿# 20191110 수업
+﻿
+# 20191110 수업
 ### JDBC  프로그래밍
 이클립스 > Dynamic Web Project > 웹 프로젝트 생성
 **테이블 이름은 보통 복수로 만듭니다.**
@@ -21,15 +22,24 @@ MemberDao, BoardDao
 2. 대부분 웹에서는 순서가 있는 데이터를 많이 다루기 때문에 list를 쓴다 ( Set이랑 Hash 보다는 )
 3. 테이블컬럼명과 자바 변수명은 통일해서 사용한다.
 4. getter setter와 tostring은 이클립스에서 설정할 수 있다.
-5. 자바는 1기반이다.(이게 무슨뜻이지?) 
-6. 
+5. 자바는 1기반이다. (이게 무슨뜻이지?) 
+6. ResultSet: Select 구문을 이용하여 조회된 데이터의 집합 셋트
+>ResultSet = DataSet = RecordSet = 메모리의 Cursor
+> 데이터 저장방식 : BOF -> 1 -> 2 -> 3-> ... -> EOF(false)
+>> 1->2로 가기 위해서 rs.next()를 사용
+>> 2->1, 맨처음, 맨 끝으로 갈 수 있음
+> >false는 EOF(End of Result)를 의미함
 
 **Getter Setter를 만드는 이유**
 코드에서 **읽기전용**으로 웹 페이지를 만들고 싶을 때 : Getter만 사용
 
-JDBC 사용 순서
+**JDBC 사용 순서**
 1. 드라이버 로딩
 2. Connection을 맺는다.
 3. 문장구문을 처리해주는 PreparedState를 호출한다.
 4. 데이터를 가져온다.
 5. 작업종료(close)
+
+
+pstmt.executeUpdate() = 성공/실패 반환 ( 성공 : 0, 실패 : -1 )
+pstmt.executeQuery() =  데이터 n*n 테이블 반환 ( 성공 : 객체, 실패 : null)
