#1123 - JSP 5회차 오전수업
- login처리
- jsp 파일에 encoding / common.jsp 공통처리

--- a/lecture/20191117.md
+++ b/lecture/20191117.md
@@ -8,3 +8,21 @@
 - 수정하기는 이미 한번 가져온 걸 가져와야 하고
 - 가입하기는 처음부터 가지고 와야 한다.
 
+JSP의 내장객체
+속성(attribute ) 	: 공유하고자 하는 데이터(냄비1, 냄비2, 후추병, 금속 컵 등)를 말한다.
+영역(scope) 		: 서로 다른 페이지(가족 구성원)가 참조할 수 있는 서로 공유할 수 있는 특정한 공간(부엌에 있는 캐비넷)을 의미한다. 
+바인딩(binding)	: 실행 시 필요한 속성(냄비1, 냄비2, 후추병, 금속 컵 등)들을 컨테이너(캐비넷)에 등록시키는 작업. 등록된 속성은 서블릿이나 JSP(가족구성원) 등에서 사용이 가능하다.
+
+속성과 관련된 메소드 
+
+1. {영역}.getAttribute(String key) // key값으로 등록이 되어 있는 속성을 object 타입으로 리턴
+2. {영역}.getAttributeNames() // 해당영역에 등록되어 있는 모든 속성들의 이름을 Enumeration 타입으로 리턴
+3. {영역}.setAttribute(String key, Object value) // 해당 영역에 key값의 이름으로 value객체를 등록한다.
+4. {영역}.removeAttribute(String key) // key값으로 등록되어 있는 속성을 제거한다.
+
+
+** 속성을 찾는 순서
+1. page : 하나의 페이지를 처리할 때 사용
+2. request : 요청을 처리할 때 사용
+3. session : 하나의 브라우저와 관련된 영역
+4. application : 하나의 웹 어플리케이션
