#1130 - JSP 7회차 오후수업2
- 교안문서에서 숙제찾아보기

--- a/lecture/20191130.md
+++ b/lecture/20191130.md
@@ -12,5 +12,16 @@ set orderno = orderno  + 1
 where groupno = 넘어온 groupno 
 and orderno > 넘어온orderno
 
-시
+[EL - Expression Language]
+jsp에서 가급적에서 java를 사용하지 않기 위해 나온 언어타입
+${expr} 식으로 사용함
+
+숙제!!!!!!!!! 알아오기!!!!
+1. 영역(scope)
+4개가 있다.
+2. 바인딩(binding)
+3. 속성(attribute)
+
+
+
 
