--- a/lecture/20191130.md
+++ b/lecture/20191130.md
@@ -17,9 +17,15 @@ jsp에서 가급적에서 java를 사용하지 않기 위해 나온 언어타입
 ${expr} 식으로 사용함
 
 숙제!!!!!!!!! 알아오기!!!!
-1. 영역(scope)
+1. 영역(scope) = 저장소인데 공유할 수 있는 공간임
+  1. session 
+  2. application
+  3. page
+  4. request
 4개가 있다.
+
 2. 바인딩(binding)
+
 3. 속성(attribute)
 
 
