#1201 - JSP 8회차 오후수업3
- MODEL1 종료
- JSTL의 core와 fmt 실습
- DAO에서 값 가져와서 수량만큼 jstl로 갯수뽑기

--- a/lecture/20191201.md
+++ b/lecture/20191201.md
@@ -38,5 +38,19 @@ Switch-case문
 
 
 
+[[ EL 내장 객체 ]]
+1) pageScope → 페이지Scope에 접근
+2) request Scope → 리퀘스트Scope에 접근
+3) sessionScope → 세션Scope에 접근
+4) applicationScope → 어플리케이션Scope에 접근
+5) param → 파라미터값 얻어올때 ( 1개의 Key에 1개의 Value )
+6) paramValues → 파라미터값 배열로 얻어올때( 1개의 Key에 여러개의 Value) 
+7) header → 헤더값 얻어올때 ( 1개의 Key에 1개의 Value ) 
+8) headerValues → 헤더값 배열로 얻어올때 ( 1개의 Key에 여러개의 Value ) 
+9) cookie → ${cookie. key값. value값}으로 쿠키값 조회
+10) initParam → 초기 파라미터 조회
+11) pageContext → 페이지컨텍스트 객체를 참조할때
+출처: https://hunit.tistory.com/203 [Ara Blog]
+
 
 
