#1208 - 마지막 수업 10회차

--- a/lecture/20191208.md
+++ b/lecture/20191208.md
@@ -1,4 +1,24 @@
 mvc 패턴 사용
 
-자바 bean == dto == dao
+(데이터에 해당하는 한건)
+자바 bean == dto
 vo = 값을 가지고 있는 object
+dto = 데이터 전송 object
+
+dao = 
+
+(view 파트)
+
+
+(Controller)
+
+
+[mybatis 사용이유]
+try / catch 예외처리 관련된 것을 framework로 집어넣은거
+xml에서 dao코딩을 전부 다 xml형태로 제공하는 형태임
+(dao가 100줄이면 mybatis로 30줄이면 할수있음)
+
+spring + mybatis
+
+[Hibernate]
+
